# synth

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  sound.cpp  sound.h  synth.cpp  synth.h
